--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,9 +1,11 @@
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==2.1.5
+django-crispy-forms==1.7.2
 django-toolbelt==0.0.1
 gunicorn==19.9.0
 Pillow==5.4.1
 psycopg2==2.7.7
 pytz==2018.9
+six==1.12.0
 static3==0.7.0
