--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,11 +1,20 @@
+boto==2.49.0
+boto3==1.9.118
+botocore==1.12.118
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==2.1.7
 django-crispy-forms==1.7.2
+django-storages==1.7.1
 django-toolbelt==0.0.1
+docutils==0.14
 gunicorn==19.9.0
+jmespath==0.9.4
 Pillow==5.4.1
 psycopg2==2.7.7
+python-dateutil==2.8.0
 pytz==2018.9
+s3transfer==0.2.0
 six==1.12.0
 static3==0.7.0
+urllib3==1.24.1
