--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,9 +3,10 @@ boto3==1.9.118
 botocore==1.12.140
 dj-database-url==0.5.0
 dj-static==0.0.6
-Django==2.1.7
+Django==2.2.3
 django-crispy-forms==1.7.2
 django-storages==1.7.1
+django-summernote==0.8.11.4
 django-toolbelt==0.0.1
 docutils==0.14
 gunicorn==19.9.0
@@ -16,5 +17,6 @@ python-dateutil==2.8.0
 pytz==2018.9
 s3transfer==0.2.0
 six==1.12.0
+sqlparse==0.3.0
 static3==0.7.0
 urllib3==1.24.3
