--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,6 +1,7 @@
 boto==2.49.0
 boto3==1.9.238
 botocore==1.12.238
+Click==7.0
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==2.2.5
@@ -13,6 +14,7 @@ gunicorn==19.9.0
 jmespath==0.9.4
 Pillow==6.1.0
 psycopg2==2.8.3
+pur==5.2.2
 python-dateutil==2.8.0
 pytz==2019.2
 s3transfer==0.2.1
