--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -12,13 +12,13 @@ django-toolbelt==0.0.1
 docutils==0.17
 gunicorn==20.1.0
 jmespath==0.10.0
-Pillow==8.2.0
+Pillow==8.3.*
 psycopg2==2.8.6
 pur==5.4.0
 python-dateutil==2.8.1
 pytz==2021.1
 s3transfer==0.3.6
 six==1.15.0
-sqlparse==0.4.1
+sqlparse==0.4.*
 static3==0.7.0
-urllib3==1.26.4
+urllib3==1.26.*
